# rust-example

./: Cargo.toml  README.md  RESOURCES.MD  Rvar.rs  another_enum.rs  asm.s  ciao.rs  draft-68664e664cd9ccc16a846534.md  draft-6866a0ed146618d66c9a5f0d.md  enum.rs  generic.rs  hello.rs  im-Borrow.rs  lifetime.rs  main.rs  mu-borrows.rs  ownership.rs  per.rs
.github/: CODEOWNERS
.github/workflows/: codeql.yml  rust-ci.yml
macros/: macro.rs
panic/: panicc.rs
src/: asm.rs  main.rs  prime.rs
src/AsyncFib/: Cargo.toml
src/AsyncFib/src/: main.rs
src/SyVibes/: Cargo.toml  build.rs  config.toml
src/SyVibes/src/: main.rs
src/SyVibes/ui/: window.slint
src/caat/: Cargo.toml
src/rand/: Cargo.toml  Readme.md
src/random/: Cargo.toml
src/sdl2/: Cargo.toml
src/sdl2/src/: main.rs
src/src/: main.rs
src/tcp/src/: main.rs
src/todo/: Cargo.toml
src/todo/src/: main.rs
