[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
slint = "1.10.0"
sysinfo = "0.33.1"
rand = "0.9.0"
sdl2 = "0.34"

[build-dependencies]
slint-build = "1.10.0"

[profile.release]
opt-level = 3   
lto = "fat"     
codegen-units = 1
strip = true    
panic = "abort" 

[package.metadata.winres]
