[package]
name = "SyVibes"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.10.0"
sysinfo = "0.33.1"

[build-dependencies]
slint-build = "1.10.0"


[profile.release]
opt-level = 3   
lto = "fat"     
codegen-units = 1
strip = true    
panic = "abort" 


[package.metadata.winres]
windows_subsystem = "Windows"
